feat: :sparkles: Added image, delete text

--- a/index.html
+++ b/index.html
@@ -26,19 +26,16 @@
   </head>
   <body touch-action="none" unresolved>
     <div class="achievedVideoContainer" id="achievedVideoContainer">
-	<video
-	  id="videoAchieved"
-	  class="videoAchieved"
-	  src="public/grupocpt.mp4"
-	  autoplay
-	  controls
-	></video>
+    <video
+      id="videoAchieved"
+      class="videoAchieved"
+      src="public/grupocpt.mp4"
+      autoplay
+      controls
+	  />
     </div>
+    <img class="achivied" id="achivied" src="/public/cpt-rrss.jpg"/>
     <div class="ui disabled">
-      <h1 class="achieved" id="achieved">
-        Lo has conseguido!, te has demorado:
-      </h1>
-
       <!-- functionalities -->
       <div class="ui-container">
         <div class="tooltip">
