fix: :bug: added scale, - range puzzle and favicon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Puzzle</title>
+    <title>CPT Puzzle</title>
 
     <!-- responsive -->
     <meta
@@ -23,18 +23,21 @@
     ></script>
     <!-- style -->
     <link rel="stylesheet" type="text/css" href="style.css" />
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./public/cptfavicon.png" />
   </head>
   <body touch-action="none" unresolved>
     <div class="achievedVideoContainer" id="achievedVideoContainer">
-    <video
-      id="videoAchieved"
-      class="videoAchieved"
-      src="public/grupocpt.mp4"
-      autoplay
-      controls
-	  />
+      <video
+        id="videoAchieved"
+        class="videoAchieved"
+        src="public/grupocpt.mp4"
+        autoplay
+        controls
+      />
     </div>
-    <img class="achivied" id="achivied" src="/public/cpt-rrss.jpg"/>
+    <img class="achivied" id="achivied" src="/public/cpt-rrss.jpg" />
     <div class="ui disabled">
       <!-- functionalities -->
       <div class="ui-container">
