Add video, new image, and seo

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <title>CPT Puzzle</title>
-
+    <meta name="description" content="Puzzle para cpt" />
     <!-- responsive -->
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, user-scalable=no"
+      content="width=device-width, initial-scale=1.0"
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
@@ -33,11 +33,10 @@
         id="videoAchieved"
         class="videoAchieved"
         src="public/grupocpt.mp4"
-        autoplay
         controls
       />
     </div>
-    <img class="achivied" id="achivied" src="/public/cpt-rrss.jpg" />
+    <img class="achivied" id="achivied" src="/public/cpt-rrss.jpg" alt="fondo cpt"/>
     <div class="ui disabled">
       <!-- functionalities -->
       <div class="ui-container">
